2006-06-15  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/move_resize.c (__move_loop):
	make sure a window is snapped in __move_loop when a button is released
	if it was snapped before

2006-06-04  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/expand.c (expand_vars_extended):
	convert function to have a single return point; this is good to
	implement doc/todo-vars filters in the future;
	fix $[w.name], $[w.iconname], $[w.class] and $[w.resource]
	to behave like deprecated $n, $c and $r, i.e. quote them

2006-06-03  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/expand.c:
	multiple minor tweaks: remove trailing spaces and other
	re-spacing and re-indenting, remove old "#if 0" code

2006-06-02  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/move_resize.c (ParseOneResizeArgument):
	rewrote parsing of resize arguments
	new prefix 'w' for resizing

2006-05-29  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/conditional.c (MatchesConditionMask):
	fixed handling of some conditions (iconifiable, fixed, ...)

2005-01-28  Scott Smedley  <scottie7@tpg.com.au>

	* fvwm/fvwm.1.in:
	s/reverted/negated/

	* fvwm/conditional.c:
	Output an error message if an unrecognised conditional is used
	with the Test or TestRc commands.

2006-05-11  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/frame.c (frame_mrs_hide_changing_parts):
	do not map hide windows if their width or height is zero

2006-05-09  Serge Koksharov  <gentoosiast dog yandex dot ru>

	* fvwm/ewmh_events.c:
	* fvwm/fvwm.1.in:
	* fvwm/gnome.c:
	* libs/FlocaleCharset.c:
	corrected typos

	* libs/Flocale.c:
	corrected typos in warning messages

	* libs/Colorset.c:
	* libs/PictureGraphics.c:
	* libs/PictureGraphics.h:
	renamed function PGraphicsCreateTransprency to
	PGraphicsCreateTransparency

2006-04-17  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/fvwm.1.in (COMMAND EXPANSION):
	* fvwm/expand.c (expand_args_extended):
	fixed $[n] to work exactly as $n, i.e. dequote the expansion.
