@@ -156,7 +156,7 @@ power.  It enables to embed perl expressions in the fvwm config files and
 construct fvwm commands.
 .SH "INVOCATION"
 .IX Header "INVOCATION"
-If you want to invoke the unique and persistent instanse of FvwmPerl, it is
+If you want to invoke the unique and persistent instance of FvwmPerl, it is
 suggested to do this from the \fIStartFunction\fR.  Calling it from the top is
 also possible, but involves some issues not discussed here.
 .PP
